--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/textView5"
@@ -34,14 +35,15 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:background="@drawable/back_white"
-                android:layout_marginHorizontal="30dp">
+                android:layout_marginHorizontal="30dp"
+                android:padding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_marginTop="20dp"
-                    android:padding="20dp"
+
                     android:gravity="center"
                     >
 
@@ -52,7 +54,7 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
                         <LinearLayout
-                            android:layout_width="245dp"
+                            android:layout_width="295dp"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
                             android:layout_weight="1">
@@ -62,7 +64,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Name:"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -71,7 +73,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Gender:"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -80,7 +82,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Date of Birth:"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -89,7 +91,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Mobile Number:"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -98,7 +100,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Email:"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold"/>
                         </LinearLayout>
 
@@ -114,7 +116,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Your name here"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
 
 
@@ -124,7 +126,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Your Gender here"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -133,7 +135,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Your DOB here"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -142,7 +144,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Your Contact here"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
                             <TextView
                                 android:id="@+id/Profile_Email"
@@ -150,7 +152,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Your Email here"
                                 android:textColor="@color/FontColor"
-                                android:textSize="15sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
 
 
