--- a/app/src/main/res/layout/institute.xml
+++ b/app/src/main/res/layout/institute.xml
@@ -17,6 +17,8 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginBottom="10dp"
+        android:textColor="#ffffff"
+        android:background="@drawable/menu_background"
         />
 
     <ImageView
