--- a/app/src/main/res/layout/list_category_item.xml
+++ b/app/src/main/res/layout/list_category_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Name"
-        android:id="@+id/item_list"
+        android:id="@+id/item_lists"
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:textAlignment="center"
@@ -20,4 +21,4 @@
         />
 
 </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
