--- a/app/src/main/res/layout/list_category_items.xml
+++ b/app/src/main/res/layout/list_category_items.xml
@@ -1,23 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/menu_background"
         android:orientation="horizontal"
         >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="Name"
-        android:id="@+id/item_list"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@drawable/menu_background"
+            app:cardBackgroundColor="@color/FontColor"
+            app:cardCornerRadius="40dp"
+            android:layout_gravity="center"
+            android:padding="30dp">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center"
+                android:textSize="30sp"
+                android:layout_marginLeft="30dp"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:id="@+id/picture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@tools:sample/avatars"
+                android:layout_margin="30dp"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
