new Design builded

--- a/app/src/main/res/layout/admin_signup_fragment_page.xml
+++ b/app/src/main/res/layout/admin_signup_fragment_page.xml
@@ -213,7 +213,8 @@
                                 android:layout_height="wrap_content"
                                 android:text="Student"
                                 android:textSize="20sp"
-                                android:textColor="#9B673AB7"/>
+                                android:textColor="#9B673AB7"
+                                android:visibility="gone"/>
 
                         </RadioGroup>
                     </LinearLayout>
