--- a/app/src/main/res/layout/activity_show__profile.xml
+++ b/app/src/main/res/layout/activity_show__profile.xml
@@ -1,9 +1,349 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Show_Profile">
+    tools:context=".Show_Profile"
+    android:background="@drawable/bg">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hello,"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"/>
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign Up!"
+                android:textColor="@android:color/white"
+                android:textSize="50sp"
+                android:layout_marginLeft="20dp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/borderbutton"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="30dp"
+                android:padding="7dp"
+                android:layout_marginBottom="20dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:background="@drawable/back_white"
+                    android:layout_margin="5dp"
+                    android:padding="20dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:text="Enter Details"
+                        android:gravity="center_horizontal"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="Type User:"
+                        android:gravity="center_horizontal"
+                        android:id="@+id/type"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="Institute Name:"
+                        android:gravity="center_horizontal"
+                        android:id="@+id/insName"/>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:id="@+id/fnameR"
+                        android:layout_height="40sp"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:hint="Full Name"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="20dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="text"
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:id="@+id/emailR"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:hint="Email"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="textEmailAddress"
+
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:id="@+id/contactR"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:hint="Mobile Number"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="phone"
+
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+
+
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Gender"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:textColor="#9B673AB7"
+                            android:textStyle="bold"
+                            />
+
+                        <RadioGroup
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:id="@+id/gendergroup">
+
+                            <RadioButton
+                                android:id="@+id/maleR"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Male"
+                                android:textSize="20sp"
+                                android:textColor="#9B673AB7"
+                                android:checked="true"/>
+
+                            <RadioButton
+                                android:id="@+id/femaleR"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Female"
+                                android:textSize="20sp"
+                                android:textColor="#9B673AB7"/>
+                            <RadioButton
+                                android:id="@+id/othersR"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Others"
+                                android:textSize="20sp"
+                                android:textColor="#9B673AB7"
+                                />
+                        </RadioGroup>
+                    </LinearLayout>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:id="@+id/dob"
+                        android:hint="Date of Birth"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="date"
+
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:id="@+id/applyDate"
+                        android:hint="Apply Date"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="date"
+
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:id="@+id/Cate"
+                        android:hint="User Category"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="text"
+
+                        />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:id="@+id/abouts"
+                        android:hint="About"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="textMultiLine"
+
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <!--                    <RadioGroup-->
+                        <!--                        android:layout_width="wrap_content"-->
+                        <!--                        android:layout_height="wrap_content"-->
+                        <!--                        android:layout_weight="1"-->
+                        <!--                        android:id="@+id/typegroup">-->
+
+                        <!--                        <RadioButton-->
+                        <!--                            android:id="@+id/adminR"-->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:text="Admin"-->
+                        <!--                            android:textSize="20sp"-->
+                        <!--                            android:textColor="#9B673AB7"-->
+                        <!--                            android:checked="true"/>-->
+
+                        <!--                        <RadioButton-->
+                        <!--                            android:id="@+id/instituteR"-->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:text="Institute"-->
+                        <!--                            android:textSize="20sp"-->
+                        <!--                            android:textColor="#9B673AB7"/>-->
+
+                        <!--                    </RadioGroup>-->
+                    </LinearLayout>
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:id="@+id/pass1"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:hint="Password"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="textPassword"
+
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp"
+                        android:id="@+id/pass2"
+                        android:background="@drawable/input_back"
+                        android:textStyle="bold"
+                        android:hint="Confirm Password"
+                        android:textColorHint="#9B673AB7"
+                        android:textSize="20sp"
+                        android:textColor="#000000"
+                        android:layout_marginBottom="25dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center"
+                        android:textAlignment="center"
+                        android:inputType="textPassword"
+
+                        />
+                    <Button
+                        android:id="@+id/register"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Register"
+                        android:background="@drawable/button"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"
+                        android:layout_marginHorizontal="80dp"/>
+                    <ProgressBar
+                        android:id="@+id/progressBarSignup"
+                        style="?android:attr/progressBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible"
+                        android:layout_marginBottom="45dp"
+
+                        />
+
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
