--- a/app/src/main/res/layout/student_test_home_fragment_page.xml
+++ b/app/src/main/res/layout/student_test_home_fragment_page.xml
@@ -1,7 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#5467ff">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/top">
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Home"
+            android:background="@drawable/input_back"
+            android:textSize="25sp"
+            android:paddingVertical="10dp"
+            android:layout_margin="5dp"
+            android:textColor="@color/FontColor"
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/top">
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/TabLayout"
+            app:tabTextColor="@color/FontColor"
+            app:tabSelectedTextColor="#300087"
+            android:outlineSpotShadowColor="@color/FontColor"
+            >
+
+
+        </com.google.android.material.tabs.TabLayout>
+<androidx.viewpager.widget.ViewPager
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/pager">
+
+
+</androidx.viewpager.widget.ViewPager>
+
+
+    </LinearLayout>
 </RelativeLayout>
